tests/expected_output/main_wrong_type/000000-clang-14.0-x86_64-pc-linux-gnu.txt
main_wrong_type.c:1:5: error: second parameter of 'main' (argument array) must be of type 'char **'
int main(int argc, int argv[]) {
    ^
dcc explanation: your declaration of 'main' is incorrect.
Try either 'int main(void)' or 'int main(int argc, char *argv[])'
